--- a/index.html
+++ b/index.html
@@ -5,47 +5,42 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>The Loop</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" />
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <div class="page page-light">
-    <div class="wrapper">
-      <div class="page page-light">
-        <div class="wrapper">
-          <header>
-            <nav>
-              <ul class="nav">
-                <li class="nav__item">
-                  <a href="#">Для мужчин</a>
-                </li>
-                <li class="nav__item">
-                  <a href="#">Для женщин</a>
-                </li>
-                <li class="nav__item">
-                  <a href="#">Для детей</a>
-                </li>
-              </ul>
-            </nav>
-            <img src="img/logo.svg" alt="Логотип компании">
-            <nav class="nav">
-              <ul>
-                <li class="nav__item">
-                  <a href="#">Оплата</a>
-                </li>
-                <li class="nav__item">
-                  <a href="#">Доставка</a>
-                </li>
-              </ul>
-              <div class="cart">
-                <span>5</span>
-              </div>
-            </nav>
-          </header>
+  <div class="wrapper">
+    <header class="header">
+      <nav class="nav">
+        <ul class="nav__list">
+          <li class="nav__item">
+            <a class="nav__link" href="#">Для мужчин</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="#">Для женщин</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="#">Для детей</a>
+          </li>
+        </ul>
+        <img src="img/logo.svg" alt="Логотип компании">
+        <ul class="nav__list">
+          <li class="nav__item">
+            <a class="nav__link" href="#">Оплата</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="#">Доставка</a>
+          </li>
+        </ul>
+        <div class="cart">
+          <span class="cart__count">5</span>
         </div>
-      </div>
-    </div>
+      </nav>
+    </header>
+
+  </div>
   </div>
 
 </body>
