Разметил блоки sale и price
Разметил блоки sale и price

--- a/index.html
+++ b/index.html
@@ -39,7 +39,18 @@
         </div>
       </nav>
     </header>
-
+    <main class="main">
+      <div class="sale main-item">
+        <h1 class="sale__title">Зимняя распродажа</h1>
+        <p class="sale__description">СКИДКИ ДО 90%</p>
+        <a href="#" class="btn">СМОТРЕТЬ МОДЕЛИ</a>
+      </div>
+      <div class="price main-item">
+        <s class="price__old">9 900 ₽ </s>
+        <p class="price__new">1 900 ₽</p>
+        <img src="img/running_shoes.png" alt="обувь" class="price__img">
+      </div>
+    </main>
   </div>
   </div>
 
