Стилизовал блоки sale и price
Стилизовал блоки sale и price

--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
       </nav>
     </header>
     <main class="main">
-      <div class="sale main-item">
+      <div class="sale main__item">
         <h1 class="sale__title">Зимняя распродажа</h1>
         <p class="sale__description">СКИДКИ ДО 90%</p>
         <a href="#" class="btn">СМОТРЕТЬ МОДЕЛИ</a>
       </div>
-      <div class="price main-item">
+      <div class="price main__item">
         <s class="price__old">9 900 ₽ </s>
         <p class="price__new">1 900 ₽</p>
         <img src="img/running_shoes.png" alt="обувь" class="price__img">
@@ -53,6 +53,5 @@
     </main>
   </div>
   </div>
-
 </body>
 </html>
