Разметил и стилизовал блок notice
Разметил и стилизовал блок notice

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <div class="page page-light">
+  <div class="page page__light">
   <div class="wrapper">
     <header class="header">
       <nav class="nav">
@@ -51,6 +51,12 @@
         <img src="img/running_shoes.png" alt="обувь" class="price__img">
       </div>
     </main>
+  </div>
+  <div class="page page__dark notice">
+    <div class="wrapper">
+      <p class="notice__title">БЕСПЛАТНАЯ ДОСТАВКА<span>ОТ 3000₽</span></p>
+      <p class="notice__description">Сделайте заказ и получите подарок!</p>
+    </div>
   </div>
   </div>
 </body>
