Разметил и стилизовал блок collection
Разметил и стилизовал блок collection

--- a/index.html
+++ b/index.html
@@ -11,53 +11,67 @@
 </head>
 <body>
   <div class="page page__light">
-  <div class="wrapper">
-    <header class="header">
-      <nav class="nav">
-        <ul class="nav__list">
-          <li class="nav__item">
-            <a class="nav__link" href="#">Для мужчин</a>
-          </li>
-          <li class="nav__item">
-            <a class="nav__link" href="#">Для женщин</a>
-          </li>
-          <li class="nav__item">
-            <a class="nav__link" href="#">Для детей</a>
-          </li>
-        </ul>
-        <img src="img/logo.svg" alt="Логотип компании">
-        <ul class="nav__list">
-          <li class="nav__item">
-            <a class="nav__link" href="#">Оплата</a>
-          </li>
-          <li class="nav__item">
-            <a class="nav__link" href="#">Доставка</a>
-          </li>
-        </ul>
-        <div class="cart">
-          <span class="cart__count">5</span>
-        </div>
-      </nav>
-    </header>
-    <main class="main">
-      <div class="sale main__item">
-        <h1 class="sale__title">Зимняя распродажа</h1>
-        <p class="sale__description">СКИДКИ ДО 90%</p>
-        <a href="#" class="btn">СМОТРЕТЬ МОДЕЛИ</a>
-      </div>
-      <div class="price main__item">
-        <s class="price__old">9 900 ₽ </s>
-        <p class="price__new">1 900 ₽</p>
-        <img src="img/running_shoes.png" alt="обувь" class="price__img">
-      </div>
-    </main>
-  </div>
-  <div class="page page__dark notice">
     <div class="wrapper">
-      <p class="notice__title">БЕСПЛАТНАЯ ДОСТАВКА<span>ОТ 3000₽</span></p>
-      <p class="notice__description">Сделайте заказ и получите подарок!</p>
+      <header class="header">
+        <nav class="nav">
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a class="nav__link" href="#">Для мужчин</a>
+            </li>
+            <li class="nav__item">
+              <a class="nav__link" href="#">Для женщин</a>
+            </li>
+            <li class="nav__item">
+              <a class="nav__link" href="#">Для детей</a>
+            </li>
+          </ul>
+          <img src="img/logo.svg" alt="Логотип компании">
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a class="nav__link" href="#">Оплата</a>
+            </li>
+            <li class="nav__item">
+              <a class="nav__link" href="#">Доставка</a>
+            </li>
+          </ul>
+          <div class="cart">
+            <span class="cart__count">5</span>
+          </div>
+        </nav>
+      </header>
+      <main class="main">
+        <div class="sale main__item">
+          <h1 class="sale__title">Зимняя распродажа</h1>
+          <p class="sale__description">Скидки до 90%</p>
+          <a href="#" class="btn">Смотреть модели</a>
+        </div>
+        <div class="price main__item">
+          <s class="price__old">9 900 ₽ </s>
+          <p class="price__new">1 900 ₽</p>
+          <img src="img/running_shoes.png" alt="обувь" class="price__img">
+        </div>
+      </main>
     </div>
-  </div>
+    <div class="page page__dark notice">
+      <div class="wrapper">
+        <p class="notice__title">Бесплатная доставка<span> ОТ 3000₽</span></p>
+        <p class="notice__description">Сделайте заказ и получите подарок!</p>
+      </div>
+    </div>
+    <div class="wrapper">
+      <div class="collection">
+        <div class="collection__item collection__man">
+          <h3 class="collection__title"><b>Мужская </b>коллекция</h3>
+          <div class="collection__description">Обувь, полуверы, костюмы</div>
+          <a href="#" class="btn btn__xs"><img src="img/icons/arrow.svg" alt="" width="20px" height="10px"></a>
+        </div>
+        <div class="collection__item collection__woman">
+          <h3 class="collection__title"><b>Женская </b>коллекция</h3>
+          <div class="collection__description">Обувь, полуверы, костюмы</div>
+          <a href="#" class="btn btn__xs"><img src="img/icons/arrow.svg" alt="" width="20px" height="10px"></a>
+        </div>
+      </div>
+    </div>
   </div>
 </body>
 </html>
