Разметил блок в page__dark в подвале
Разметил блок в page__dark в подвале

--- a/index.html
+++ b/index.html
@@ -104,12 +104,65 @@
                 <p class="catalog__price">₽ 40 000</p>
               </li> 
             </ul>
-            <a class="btn btn__catalog" href="#">Все модели
-              <img src="img/icons/arrow.svg" alt="">
-            </a>
+            <a class="btn btn__catalog" href="#">Все модели<img src="img/icons/arrow.svg" alt=""></a>
           </div>
         </div>
       </div>
+      <footer class="footer">
+        <div class="page__dark">
+          <div class="wrapper">
+            <div class="footer__img">
+              <img src="img/logo-footer.svg" alt="логоти компании">
+            </div>
+            <div class="footer__item">
+              <div class="links">
+                <h3 class="links__title">Основные ссылки</h3>
+                <ul class="links__list">
+                  <li class="link__item"><a href="#">О компании</a></li>
+                  <li class="link__item"><a href="#">Каталог</a></li>
+                  <li class="link__item"><a href="#">Доставка</a></li>
+                  <li class="link__item"><a href="#">Оплата</a></li>
+                </ul>
+              </div>
+              <div class="footer__item">
+                <div class="categories">
+                  <h3 class="categories__title">Категории</h3>
+                  <ul class="categories__list">
+                    <li class="link__item"><a href="#">Мужская одежда</a></li>
+                    <li class="link__item"><a href="#">Женская одежда</a></li>
+                    <li class="link__item"><a href="#">Детская одежда</a></li>
+                    <li class="link__item"><a href="#">Для животных</a></li>
+                  </ul>
+                </div>
+              </div>
+              <div class="footer__item">
+                <div class="useful__links">
+                  <h3 class="useful__title">Полезные ссылки</h3>
+                  <ul class="useful__list">
+                    <li class="useful__link-item"><a href="#">Таблица размеров</a></li>
+                    <li class="useful__link-item"><a href="#">Блог о моде</a></li>
+                    <li class="useful__link-item"><a href="#">Наша миссия</a></li>
+                  </ul>
+                </div>
+              </div>
+              <div class="social">
+                <h3 class="social__title">Соц сети</h3>
+                <ul class="social__list">
+                  <li class="social__item">
+                    <a class="social__link social__link--vkontakte" href="#">VK.com</a>
+                  </li>
+                  <li class="social__item">
+                    <a class="social__link social__link--facebook" href="#">Facebook</a>
+                  </li>
+                  <li class="social__item">
+                    <a class="social__link social__link--instagram" href="#">Instagram</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
