Разметил блок в page__white в подвале
Разметил блок в page__white в подвале

--- a/index.html
+++ b/index.html
@@ -162,6 +162,13 @@
             </div>
           </div>
         </div>
+        <div class="page__white">
+          <div class="wrapper"></div>
+          <div class="copyright">
+            <p class="copyright__text">Copyright © 2019. Все права защищены</p>
+            <p class="copyright__policy">Политика приватности</p>
+          </div>
+        </div>
       </footer>
     </div>
   </body>
