--- a/index.html
+++ b/index.html
@@ -163,10 +163,11 @@
           </div>
         </div>
         <div class="page__white">
-          <div class="wrapper"></div>
-          <div class="copyright">
-            <p class="copyright__text">Copyright © 2019. Все права защищены</p>
-            <p class="copyright__policy">Политика приватности</p>
+          <div class="wrapper">
+            <div class="copyright">
+              <p class="copyright__text">Copyright © 2019. Все права защищены</p>
+              <p class="copyright__policy">Политика приватности</p>
+            </div>
           </div>
         </div>
       </footer>
