Завершил стилизацию стилизацию блока page__dark в подвале
Завершил стилизацию стилизацию блока page__dark в подвале

--- a/index.html
+++ b/index.html
@@ -131,10 +131,10 @@
                   <div class="categories">
                     <h3 class="categories__title">Категории</h3>
                     <ul class="categories__list">
-                      <li class="link__item"><a href="#">Мужская одежда</a></li>
-                      <li class="link__item"><a href="#">Женская одежда</a></li>
-                      <li class="link__item"><a href="#">Детская одежда</a></li>
-                      <li class="link__item"><a href="#">Для животных</a></li>
+                      <li class="categories__link-item"><a href="#">Мужская одежда</a></li>
+                      <li class="categories__link-item"><a href="#">Женская одежда</a></li>
+                      <li class="categories__link-item"><a href="#">Детская одежда</a></li>
+                      <li class="categories__link-item"><a href="#">Для животных</a></li>
                     </ul>
                   </div>
                 </div>
@@ -148,19 +148,21 @@
                     </ul>
                   </div>
                 </div>
-                <div class="social">
-                  <h3 class="social__title">Соц сети</h3>
-                  <ul class="social__list">
-                    <li class="social__item">
-                      <a class="social__link social__link--vkontakte" href="#">VK.com</a>
-                    </li>
-                    <li class="social__item">
-                      <a class="social__link social__link--facebook" href="#">Facebook</a>
-                    </li>
-                    <li class="social__item">
-                      <a class="social__link social__link--instagram" href="#">Instagram</a>
-                    </li>
-                  </ul>
+                <div class="footer__item">
+                  <div class="social">
+                    <h3 class="social__title">Соц сети</h3>
+                    <ul class="social__list">
+                      <li class="social__item">
+                        <a class="social__link" href="#"><img src="../img/icons/icon-vk.svg" alt="">VK.com</a>
+                      </li>
+                      <li class="social__item">
+                        <a class="social__link" href="#"><img src="../img/icons/icon-fb.svg" alt="">Facebook</a>
+                      </li>
+                      <li class="social__item">
+                        <a class="social__link" href="#"><img src="../img/icons/icon-insta.svg" alt="">Instagram</a>
+                      </li>
+                    </ul>
+                  </div>
                 </div>
               </div>
             </div>
