Завершил стилизацию стилизацию подвала, проверил разметку валидатором.
Завершил стилизацию стилизацию подвала, проверил разметку валидатором. Работа по верстке завершена

--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
             <div class="collection__item collection__man">
               <h3 class="collection__title"><b>Мужская </b>коллекция</h3>
               <div class="collection__description">Обувь, полуверы, костюмы</div>
-              <a href="#" class="btn btn__xs"><img src="img/icons/arrow.svg" alt="" width="20px" height="10px"></a>
+              <a href="#" class="btn btn__xs"><img src="img/icons/arrow.svg" alt="Ссылка на товар"></a>
             </div>
             <div class="collection__item collection__woman">
               <h3 class="collection__title"><b>Женская </b>коллекция</h3>
               <div class="collection__description">Обувь, полуверы, костюмы</div>
-              <a href="#" class="btn btn__xs"><img src="img/icons/arrow.svg" alt="" width="20px" height="10px"></a>
+              <a href="#" class="btn btn__xs"><img src="img/icons/arrow.svg" alt="Ссылка на товар"></a>
             </div>
           </div>
         </div>
@@ -90,7 +90,7 @@
               </li> 
               <li class="catalog__item">
                 <img src="../img/catalog-img2.png" alt="изоброжение товара">
-                <h3 class="catalog__title">Коктейльное<br>платье</h3>
+                <h3 class="catalog__title">Мужская<br>майка</h3>
                 <p class="catalog__price">₽ 40 000</p>
               </li> 
               <li class="catalog__item">
@@ -100,7 +100,7 @@
               </li> 
               <li class="catalog__item">
                 <img src="../img/catalog-img4.png" alt="изоброжение товара">
-                <h3 class="catalog__title">Коктейльное<br>платье</h3>
+                <h3 class="catalog__title">Мужская<br>майка</h3>
                 <p class="catalog__price">₽ 40 000</p>
               </li> 
             </ul>
