Сменил путь к изображениям в разметки.
Сменил путь к изображениям в разметки.

--- a/index.html
+++ b/index.html
@@ -84,22 +84,22 @@
             <h2 class="catalog__heading">Новые модели</h2>
             <ul class="catalog__list">
               <li class="catalog__item">
-                <img src="../img/catalog-img1.png" alt="изоброжение товара">
+                <img src="img/catalog-img1.png" alt="изоброжение товара">
                 <h3 class="catalog__title">Коктейльное<br>платье</h3>
                 <p class="catalog__price">₽ 40 000</p>
               </li> 
               <li class="catalog__item">
-                <img src="../img/catalog-img2.png" alt="изоброжение товара">
+                <img src="img/catalog-img2.png" alt="изоброжение товара">
                 <h3 class="catalog__title">Мужская<br>майка</h3>
                 <p class="catalog__price">₽ 40 000</p>
               </li> 
               <li class="catalog__item">
-                <img src="../img/catalog-img3.png" alt="изоброжение товара">
+                <img src="img/catalog-img3.png" alt="изоброжение товара">
                 <h3 class="catalog__title">Коктейльное<br>платье</h3>
                 <p class="catalog__price">₽ 40 000</p>
               </li> 
               <li class="catalog__item">
-                <img src="../img/catalog-img4.png" alt="изоброжение товара">
+                <img src="img/catalog-img4.png" alt="изоброжение товара">
                 <h3 class="catalog__title">Мужская<br>майка</h3>
                 <p class="catalog__price">₽ 40 000</p>
               </li> 
@@ -153,13 +153,13 @@
                     <h3 class="social__title">Соц сети</h3>
                     <ul class="social__list">
                       <li class="social__item">
-                        <a class="social__link" href="#"><img src="../img/icons/icon-vk.svg" alt="">VK.com</a>
+                        <a class="social__link" href="#"><img src="img/icons/icon-vk.svg" alt="">VK.com</a>
                       </li>
                       <li class="social__item">
-                        <a class="social__link" href="#"><img src="../img/icons/icon-fb.svg" alt="">Facebook</a>
+                        <a class="social__link" href="#"><img src="img/icons/icon-fb.svg" alt="">Facebook</a>
                       </li>
                       <li class="social__item">
-                        <a class="social__link" href="#"><img src="../img/icons/icon-insta.svg" alt="">Instagram</a>
+                        <a class="social__link" href="#"><img src="img/icons/icon-insta.svg" alt="">Instagram</a>
                       </li>
                     </ul>
                   </div>
